Fix: GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,22 +22,41 @@ jobs:
       - name: Build Hugo site
         run: hugo --minify
 
-      # === 修改后的部署步骤 ===
+      - name: Debug: List files on runner
+        run: |
+          echo "=== Current working directory on runner ==="
+          pwd
+          echo "=== Listing files in public directory on runner ==="
+          ls -la public/
+          echo "==============================================="
+
+      # === 使用正确的 scp-action 进行部署 ===
       - name: Deploy to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          source: "public"
+          target: "/data/blog"
+          strip_components: 1
+
+      - name: Debug: Check server status
+        if: always()
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.DEPLOY_KEY }}
-          # ===== 新增的参数 =====
-          source: "public" # 指定本地（GitHub Actions）的源目录
-          target: "/data/blog" # 指定服务器上的目标目录
-          strip_components: 1 # 这个很重要，它会去掉 'public' 这一层目录
-          # script 部分现在可以为空，或者用来执行其他服务器命令
-          # script: |
-          #   echo "Deployment from rsync finished."
+          script: |
+            echo "=== I am logged in as ==="
+            whoami
+            echo "=== Target directory info ==="
+            ls -ld /data/blog
+            echo "=== Listing contents of target directory ==="
+            ls -la /data/blog
+            echo "=========================================="
 
-      # === 成功通知 ===
       - name: Send success notification
         if: success()
         run: |
@@ -53,7 +72,6 @@ jobs:
             }' \
             https://api.pushover.net/1/messages.json
 
-      # === 失败通知 ===
       - name: Send failure notification
         if: failure()
         run: |
